Agrego comentarios de la clase 09

--- a/Ejercicios de clases/clase_09.ipynb
+++ b/Ejercicios de clases/clase_09.ipynb
@@ -324,6 +324,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "En el archivo matplotlibrc, las líneas que tienen un sólo comment # son los valores por defecto\n",
+    "\n",
+    "Uno puede copiar el archivo, pegarlo en nuestro lugar de trabajo y modificarlo. No modificar el archivo ubicado en el directorio de instalación!. De ese modo, el todos los gráficos van a tener esa configuración.\n",
+    "\n",
+    "Es necesario hacer el bloque porque si no lo usamos y hacemos varios gráficos con varios estilos, los estilos se acumulan\n",
+    "\n",
+    "Tengo problemas para ejecutar 09_2\n",
+    "Cuando uso get_configdir no me lleva al entorno de conda\n",
+    "\n",
+    "mpl es un acrónimo para matplotlib\n",
+    "\n",
+    "Los gráficos de los ejercicios no aparecen en el notebook pero están disponibles en la página web de la materia\n",
+    "\n",
+    "El código \n",
+    "***\n",
+    "no corre en Windows. Es necesario ejecutar\n",
+    "***\n",
+    "\n",
+    "No tengo que modificar nada en\n",
+    "\n",
+    "proque es el lugar de instalación. SI lo modifico y hay una actualización, me van a sobreescribir el archivo\n",
+    "\n",
+    "Tengo que modificarlo en get_configdir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
