--- a/Ejercicios de clases/clase_10.ipynb
+++ b/Ejercicios de clases/clase_10.ipynb
@@ -198,6 +198,15 @@
     "def fibonacci(N):\n",
     "    '''\n",
     "    Calcula los primeros N términos de la sucesión de Fibonacci\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    N (int): nro de elementos a calcular de la sucesión de Fibonacci\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    list: lista con los primeros N nros de la sucesión de Fibonacci\n",
+    "\n",
     "    '''\n",
     "    if N == 2:\n",
     "        return fibonacci(1) + [1]\n",
@@ -222,9 +231,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 8\n",
-    "\n",
     "def ocurrencia(N):\n",
+    "    '''\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    '''\n",
     "    #Calculo la serie de Fibonacci\n",
     "    lista = fibonacci(N)\n",
     "\n",
@@ -504,7 +516,8 @@
     "x_array = np.linspace(2.9,3.4, 10000)\n",
     "plt.plot(x_array, f_gauss(x_array, mean1, std1), color = \"tab:blue\")\n",
     "plt.plot(x_array, f_gauss(x_array, mean2, std2), color = \"tab:red\")\n",
-    "\n"
+    "plt.xlabel(\"Estimación de Monte Carlo\")\n",
+    "plt.ylabel(\"Densidad de probabilidad\")\n"
    ]
   },
   {
@@ -589,7 +602,7 @@
     }
    ],
    "source": [
-    "#Ejercicio 4\n",
+    "#Ejercicio 5 parte 2\n",
     "N_exp = 1000 #Nro de veces que se repite el experimento\n",
     "N = 15000\n",
     "N_array = N*np.ones(N_exp, dtype = int)\n",
@@ -612,7 +625,8 @@
     "    #Grafico gaussiana\n",
     "    x_array = np.linspace(2.9,3.4, 10000)\n",
     "    plt.plot(x_array, f_gauss(x_array, mean, std), color = colores[i])\n",
-    "\n",
+    "plt.xlabel(\"Estimación de Monte Carlo\")\n",
+    "plt.ylabel(\"Densidad de probabilidad\")\n",
     "\n",
     "plt.xlim([2.9,3.4])\n",
     "plt.legend()\n",
