--- a/Ejercicios a entregar/Final/simulacion_de_medicion_y_analisis_de_datos.ipynb
+++ b/Ejercicios a entregar/Final/simulacion_de_medicion_y_analisis_de_datos.ipynb
@@ -490,6 +490,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**ALTURA MAYOR A LO ESPERADO SEGÚN EL ENUNCIADO**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Hago una animación"
    ]
   },
