Agregué un comentario

--- a/Ejercicios a entregar/Final/simulacion_de_medicion_y_analisis_de_datos.ipynb
+++ b/Ejercicios a entregar/Final/simulacion_de_medicion_y_analisis_de_datos.ipynb
@@ -681,6 +681,7 @@
     "    Los máximos tienen que estar ubicados de izquierda a derecha\n",
     "\n",
     "    Hacer documentación de la función TO-DO\n",
+    "    HACER LA CUENTA COMO ROCÍO PARA QUE NO ME LLEVE TANTO TIEMPO\n",
     "    Cambiarla para que haga un ajuste de los datos y en función de eso se calcule el ancho a altura media TO-DO\n",
     "    Aclarar qué significa \"ancho a media altura\" en esta función y en el markdown de Ejericio 3 y 4 más arriba TO-DO\n",
     "\n",
