Hice ligeros cambios

--- a/Ejercicios a entregar/Final/simulacion_de_medicion_y_analisis_de_datos.ipynb
+++ b/Ejercicios a entregar/Final/simulacion_de_medicion_y_analisis_de_datos.ipynb
@@ -967,7 +967,7 @@
     "    plt.plot(x_array, signal_mean, label = \"Medición promedio\")\n",
     "    plt.title(f\"Promedio de {N} mediciones del caso {i + 1}:\\n$t_0 = $\" + str(list(T0_Ps[i].keys())) + \", P = \" + str(list(T0_Ps[i].values())))\n",
     "    plt.ylabel(\"Tensión (mV)\")\n",
-    "    plt.xlabel(\"tiempo \\, ($\\mu$s)\")\n",
+    "    plt.xlabel(\"tiempo ($\\mu$s)\")\n",
     "    plt.xlim([0,8])\n",
     "\n",
     "    #Busco los máximos relativos\n",
@@ -1097,7 +1097,7 @@
     "    plt.plot(x_array, signal_mean, label = \"Medición promedio\")\n",
     "    plt.title(f\"Promedio de {N} mediciones del caso {i + 1}:\\n$t_0 = $\" + str(list(T0_Ps[i].keys())) + \", P = \" + str(list(T0_Ps[i].values())))\n",
     "    plt.ylabel(\"Tensión (mV)\")\n",
-    "    plt.xlabel(\"tiempo \\, ($\\mu$s)\")\n",
+    "    plt.xlabel(\"tiempo ($\\mu$s)\")\n",
     "    plt.xlim([0,8])\n",
     "\n",
     "    #Hago un ajuste\n",
